--- a/Untitled0.ipynb
+++ b/Untitled0.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPd1LdYh7CgUgSql2cbtaNJ",
+      "authorship_tag": "ABX9TyP/fVT68c/huoA6RDbUDZnE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,13 +28,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "797dYWD1DqQ1",
-        "outputId": "c15376f6-378e-40d1-8b65-43d12e622413"
+        "outputId": "afde930d-6223-46be-dbe0-2002d3ae391b"
       },
       "outputs": [
         {
@@ -42,7 +42,9 @@
           "name": "stdout",
           "text": [
             "Enter the value:23\n",
-            "The value in Fahrenheit 73.4\n"
+            "The value in Fahrenheit 73.4\n",
+            "Enter the value:23\n",
+            "The value in celsius -5\n"
           ]
         }
       ],
@@ -53,6 +55,32 @@
         "Fahrenheit_f=float(input(\"Enter the value:\"))\n",
         "celsius_c=int((Fahrenheit_f-32)/1.8)\n",
         "print(\"The value in celsius\",celsius_c)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "n=int(input('Enter the number\"'))\n",
+        "rev=int(str(n)[::-1])\n",
+        "print('the reverse number is =',rev)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "FDF3PW1DH7Ij",
+        "outputId": "2693eabf-9319-4f60-d550-0c72f1ee916c"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter the number\"123\n",
+            "the reverse number is = 321\n"
+          ]
+        }
       ]
     }
   ]
