--- a/Untitled0.ipynb
+++ b/Untitled0.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP/fVT68c/huoA6RDbUDZnE",
+      "authorship_tag": "ABX9TyPrH/Ydma/6eRCnsVlGxQHq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -59,6 +59,15 @@
     },
     {
       "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "nFzwL1kKFgEz"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
       "source": [
         "n=int(input('Enter the number\"'))\n",
         "rev=int(str(n)[::-1])\n",
@@ -69,7 +78,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "FDF3PW1DH7Ij",
-        "outputId": "2693eabf-9319-4f60-d550-0c72f1ee916c"
+        "outputId": "8cc00d2b-3d3e-4f0a-f9ba-0ea355f8d201"
       },
       "execution_count": 4,
       "outputs": [
@@ -77,8 +86,39 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Enter the number\"123\n",
-            "the reverse number is = 321\n"
+            "Enter the number\"143\n",
+            "the reverse number is = 341\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a=int(input(\"ENTER a VALUE=\"))\n",
+        "b=int(input(\"ENTER b VALUE=\"))\n",
+        "def sum(a,b):\n",
+        "      for i in range(1,b + 1):\n",
+        "           a= a+1\n",
+        "      return a\n",
+        "print('SUM OF NUMBERS=',sum(a,b))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "9KDW9yJbHhSu",
+        "outputId": "2842c156-3dbe-4d95-f0d0-6a92ee26b186"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "ENTER a VALUE=49\n",
+            "ENTER b VALUE=48\n",
+            "SUM OF NUMBERS= 97\n"
           ]
         }
       ]
