--- a/Untitled0.ipynb
+++ b/Untitled0.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMDQjBr3nK+hn88MwsHGuhQ",
+      "authorship_tag": "ABX9TyPn+7f4S0bPlCL6HyFNMas8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -445,11 +445,11 @@
         "  print()"
       ],
       "metadata": {
-        "id": "EkcSs3dJlxII",
-        "outputId": "f79e3fe4-3070-48cc-8e1a-2e03b74e74fd",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "EkcSs3dJlxII",
+        "outputId": "f79e3fe4-3070-48cc-8e1a-2e03b74e74fd"
       },
       "execution_count": 31,
       "outputs": [
@@ -480,11 +480,11 @@
         "    "
       ],
       "metadata": {
-        "id": "U1rMu5T8nhIc",
-        "outputId": "fb2f7cde-fbbb-4c1c-df40-d06815cf3da4",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "U1rMu5T8nhIc",
+        "outputId": "fb2f7cde-fbbb-4c1c-df40-d06815cf3da4"
       },
       "execution_count": 32,
       "outputs": [
@@ -511,11 +511,11 @@
         "  print()"
       ],
       "metadata": {
-        "id": "ZEvu7KxQqxJc",
-        "outputId": "7a59c092-955c-4a31-a34b-343dd90ebcbb",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "ZEvu7KxQqxJc",
+        "outputId": "7a59c092-955c-4a31-a34b-343dd90ebcbb"
       },
       "execution_count": 33,
       "outputs": [
@@ -546,11 +546,11 @@
         "print('SUM from 1 to 10=',s)"
       ],
       "metadata": {
-        "id": "PAOtOLFPrGOI",
-        "outputId": "2d2f8ee0-1a7f-45dd-98ac-7c868e346d7b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "PAOtOLFPrGOI",
+        "outputId": "2d2f8ee0-1a7f-45dd-98ac-7c868e346d7b"
       },
       "execution_count": 37,
       "outputs": [
@@ -562,6 +562,86 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "n=int(input(\"Enter the number:\"))\n",
+        "r=0\n",
+        "while n>0:\n",
+        "  d=int(n%10)\n",
+        "  r=r*10+d\n",
+        "  n=int(n/10)\n",
+        "print('REVERSE=',r)"
+      ],
+      "metadata": {
+        "id": "XRcKU--Qt41f",
+        "outputId": "3b2fcb70-47d9-4fae-a7b6-c0bd8473def6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 41,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter the number:12345\n",
+            "REVERSE= 54321\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#break statement\n",
+        "i=1\n",
+        "while i<=10:\n",
+        "  print(i)\n",
+        "  if i==5:\n",
+        "    break\n",
+        "  i=i+1  "
+      ],
+      "metadata": {
+        "id": "gUfXpBNWu-Wk",
+        "outputId": "c8ef9c17-fea1-49c7-bc41-de53fe557490",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n",
+            "2\n",
+            "3\n",
+            "4\n",
+            "5\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#continue statement\n",
+        "i=1\n",
+        "while i<=10:\n",
+        "  print(i)\n",
+        "  if i==5:\n",
+        "    continue\n",
+        "  i=i+1  "
+      ],
+      "metadata": {
+        "id": "4DT7J6l5vtVb"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
